try fix displaing fav on mobile

--- a/src/components/favourites/Favourites.module.scss
+++ b/src/components/favourites/Favourites.module.scss
@@ -3,13 +3,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
+
 
   &__title {
     color: #313237;
     font-size: 32px;
     font-weight: 800;
     letter-spacing: 1px;
-    align-self: flex-start;
     width: 288px;
   }
 
